# th_marinebenefit_translator

./: .gitignore  Cargo.toml  LICENSE.md  README.md
nutil/: Cargo.toml
nutil/src/: lib.rs
src/: executable.rs  headers.rs  main.rs  patcher.rs
